--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-SCLGL13\\SQLEXPRESS;Database=UrlShortener;Integrated Security=true;MultipleActiveResultSets=True;TrustServerCertificate=True;Connection Timeout=10000;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
